package com.example.parking.model;

public enum VehicleType {
    OFICIAL,
    RESIDENTE,
    NO_RESIDENTE
}
